tests/codegen/fail/object/attr_field_non_output_return_type.stderr
error[E0277]: the trait bound `ObjB: IsOutputType<__S>` is not satisfied
  --> fail/object/attr_field_non_output_return_type.rs:12:21
   |
12 |     fn id(&self) -> ObjB {
   |                     ^^^^ the trait `IsOutputType<__S>` is not implemented for `ObjB`
   |
   = help: the following other types implement trait `IsOutputType<S>`:
             <&T as IsOutputType<S>>
             <Arc<T> as IsOutputType<S>>
             <Box<T> as IsOutputType<S>>
             <EnumValue as IsOutputType<__S>>
             <ID as IsOutputType<__S>>
             <ObjA as IsOutputType<__S>>
             <SchemaType<'a, S> as IsOutputType<S>>
             <TypeKind as IsOutputType<__S>>
           and 18 others
